<resources>
    <string name="app_name">WiFiSelector</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bssid">BSSID</string>
    <string name="_17">-17</string>
    <string name="connect">Connect</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="bark_2">Bark 2</string>
    <string name="bark_1">Bark 1</string>
    <string name="bark_3">Bark 3</string>
    <string name="beginner_s_guide">Beginner\'s guide:</string>
    <string name="connection_updated">Connection updated</string>
    <string name="connection_failed">Connection failed</string>
    <string name="binding">binding</string>
    <string name="rssi">, RSSI</string>
    <string name="signal_strength">Signal Strength:</string>
    <string name="current_connection_information">Current Connection Information</string>
    <string name="ssid">SSID:</string>
    <string name="ur_connected">UR_CONNECTED</string>
    <string name="bssid_">BSSID:</string>
    <string name="rrl_g_1_36021">RRL-G-1-36021</string>
    <string name="speed_test">Speed test</string>
    <string name="wi_fi_networks_are_often_made_up_of_multiple_access_points_the_physical_hardware_your_phone_uses_to_access_the_internet_they_usually_look_something_like_this">Wi-fi networks are often made up of multiple access points, the physical hardware your phone uses to access the internet. They usually look something like this:</string>
    <string name="picture_of_access_point_hardware">Picture of Access Point Hardware</string>
    <string name="your_phone_typically_doesn_t_account_for_traffic_when_it_chooses_an_access_point_only_signal_strength_so_in_places_like_libraries_too_much_burden_tends_to_fall_on_a_few_access_points">Your phone typically doesn\'t account for traffic when it chooses an access point, only signal strength, so in places like libraries, too much burden tends to fall on a few access points.</string>
    <string name="this_application_lets_you_override_that_choice_based_on_your_experience_on_that_network_the_signal_strength_is_certainly_a_factor_but_it_s_a_very_fickle_thing_to_measure_small_differences_in_signal_strength_shouldn_t_perceptibly_impact_your_experience_signal_strength_is_given_as_a_number_between_1_and_10">This application lets you override that choice based on your experience on that network. The signal strength is certainly a factor, but it\'s a very fickle thing to measure. Small differences in signal strength shouldn\'t perceptibly impact your experience. Signal strength is given as a number between 1 and 10.</string>
    <string name="because_signal_strength_is_such_a_fussy_thing_to_measure_don_t_worry_if_an_access_point_disappears_in_all_likelyhood_it_ll_pop_back_up_again_when_you_refresh_by_swiping_down_from_the_top_of_the_screen">Because signal strength is such a fussy thing to measure, don\'t worry if an access point disappears. In all likelyhood, it\'ll pop back up again when you refresh by swiping down from the top of the screen.</string>
    <string name="key_terms">Key Terms</string>
    <string name="ssid_this_is_the_name_of_the_overall_network_the_same_as_the_name_you_see_when_you_choose_a_wi_fi_network_through_your_default_os">SSID: This is the name of the overall network, the same as the name you see when you choose a Wi-Fi network through your default OS.</string>
    <string name="bssid_this_is_a_name_you_don_t_see_the_unique_name_of_the_physical_access_point_connection_you_re_using_unlike_your_os_this_app_lets_you_choose_between_these_to_optimize_performance">BSSID: This is a name you don\'t see, the unique name of the physical access point connection you\'re using. Unlike your OS, this app lets you choose between these to optimize performance.</string>
    <string name="nickname">Nickname</string>
    <string name="e3_812_ece_232">E3:812:ECE:232</string>
    <string name="notes_about_where_you_were_when_you_last_used_this_network_how_busy_it_was_time_of_day_etc">Notes about where you were when you last used this network, how busy it was, time of day, etc</string>
    <string name="edit">Edit</string>
    <string name="edit_favorited_access_point">Edit Favorited Access Point</string>
    <string name="nickname_">Nickname...</string>
    <string name="notes__">Notes:</string>
    <string name="location_time_of_day_etc">Location, time of day, etc...</string>
    <string name="cancel">Cancel</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="ok">OK</string>
    <string name="click_a_button_to_add_a_dog_sound_to_the_beautiful_melody">Click a button to add a dog sound to the beautiful melody</string>
    <string name="bark_4">Bark 4</string>
    <string name="bark_5">Bark 5</string>
    <string name="bark_6">Bark 6</string>
    <string name="uh_oh">Uh Oh!</string>
    <string name="for_this_application_to_work_properly_you_must_have_wi_fi_enabled_and_connected">For this application to work properly, you must have Wi-Fi enabled and connected!</string>
    <string name="configure_wi_fi">Configure Wi-Fi</string>
</resources>
